# Intol-Axiom-1200

./: CMakeLists.txt  README.md
include/: exec.h  mem_manager.h  namespace.h  opcode.h  ops.h  parser.h  registers.h  vm.h
src/: exec.c  main.c  mem_manager.c  ops_bitwise.c  ops_branch.c  ops_collections.c  ops_concurrency.c  ops_debug.c  ops_exceptions.c  ops_functions.c  ops_io.c  ops_logic.c  ops_math.c  ops_time.c  parser.c  registers.c  vm.c
text/: axiom-1100.md
